Fix text spacing and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   padding: 2px;
   margin: 7px 3px 0 3px;
   flex-grow: 1;
-  text-align: center;
+  text-align: start;
   color: black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -51,23 +51,35 @@
 .todo-task-name {
   font-family: Verdana, Arial, sans-serif;
   font-size: 14px;
-  width: 270px;
-  margin: 0 auto 3px auto;
+  /* width: 260px; */
+  max-width: 73%;
+  margin: 0 auto 3px 8px;
+  /* border: solid 1px black; */
   justify-self: center;
   align-self: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .todo-task-checkbox {
-  margin: 15px auto 13px 10px;
+  margin: 15px 0px 13px 10px;
   width: 13px;
+  min-width: 13px;
   height: 13px;
+}
+
+.todo-item-buttons-container {
+  min-width: 55px;
+  /* border: solid 1px red; */
+  margin: 0 0 0 5px;
 }
 
 .todo-edit-button {
   color: #4994bf;
   background: none;
   border: none;
-  margin: 12px 0 12px auto;
+  /* margin: 12px 0 12px auto; */
 }
 
 .todo-delete-button {
